<resources>

    <string name="firebase_default_web_client_id" translatable="false">389901073044-ckf325a7scu0f2jlmirg46ekqutib06c.apps.googleusercontent.com</string>

    <string name="app_name">VehicleExpensesApplication</string>

    <string name="settings_text">Settings</string>
    <string name="history_text">History</string>
    <string name="main_text">Main</string>

    <string name="main_title">MAIN</string>
    <string name="history_title">HISTORY</string>
    <string name="settings_title">SETTINGS</string>
    <string name="average_usage_title">AVERAGE USAGE</string>
    <string name="traveling_costs_title">TRAVELING COSTS</string>
    <string name="latest_refill_title">LATEST REFILL:</string>
    <string name="in_total_title">IN TOTAL:</string>

    <string name="traveling_costs_units">PLN/100KM</string>
    <string name="usage_units">L/100KM</string>
    <string name="price_units">PLN</string>
    <string name="mileage_units">KM</string>

    <string name="example_email_text">example@email.com</string>
    <string name="next_text">NEXT</string>
    <string name="email_adress_text">EMAIL ADRESS:</string>
    <string name="password_text">PASSWORD:</string>
    <string name="welcome_back_text">Welcome back!</string>
    <string name="log_in_text">LOG IN</string>
    <string name="new_user_name_text">NAME:</string>
    <string name="create_text">CREATE</string>
    <string name="data_null_small_text">---</string>
    <string name="data_null_big_text">---,--</string>
    <string name="date_null_text">---.---.------</string>
    <string name="capacity_units">L</string>
    <string name="save_text">SAVE</string>
    <string name="log_out_text">LOG OUT</string>
    <string name="cloud_sync_text">\"CLOUD SYNC: \"</string>
    <string name="offline_text">OFFLINE</string>
    <string name="online_text">ONLINE</string>
    <string name="date_text">DATE</string>
    <string name="date_example_text">DD / MM / YYYY</string>
    <string name="current_mileage_text">CURRENT MILEAGE</string>
    <string name="refilled_fuel_text">REFILLED FUEL</string>
    <string name="price_of_fuel_text">PRICE OF FUEL</string>

</resources>