<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.feautures.refill.RefillActivity">

        <include
            android:id="@+id/myRefillToolbar"
            layout="@layout/toolbar_top" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/refillDateTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_start_end_padding"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="@dimen/settings_start_end_padding"
            android:paddingVertical="@dimen/refill_et_padding_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/myRefillToolbar">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/refillDateTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/date_text"
                android:inputType="date"
                android:text="@string/date_example_text"
                android:textSize="@dimen/text_big" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/currentMileageTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_start_end_padding"
            android:layout_marginEnd="@dimen/settings_start_end_padding"
            android:paddingVertical="@dimen/refill_et_padding_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refillDateTIL"
            app:placeholderText="YOUR CAR MILEAGE"
            app:placeholderTextColor="@color/pistachio"
            app:suffixText="@string/mileage_units">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/currentMileageTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/current_mileage_text"
                android:inputType="numberDecimal"
                android:maxLength="12"
                android:textSize="@dimen/text_big" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/refilledFuelTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_start_end_padding"
            android:layout_marginEnd="@dimen/settings_start_end_padding"
            android:paddingVertical="@dimen/refill_et_padding_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/currentMileageTIL"
            app:placeholderText="HOW MANY LITTERS"
            app:placeholderTextColor="@color/pistachio"
            app:suffixText="@string/capacity_units">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/refilledFuelTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/refilled_fuel_text"
                android:inputType="numberDecimal"
                android:maxLength="8"
                android:textSize="@dimen/text_big" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/priceOfFuelTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_start_end_padding"
            android:layout_marginEnd="@dimen/settings_start_end_padding"
            android:paddingVertical="@dimen/refill_et_padding_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refilledFuelTIL"
            app:placeholderText="PRICE PER LITTER"
            app:placeholderTextColor="@color/pistachio"
            app:suffixText="@string/price_units"
            app:suffixTextAppearance="@dimen/text_big">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/priceOfFuelTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price_of_fuel_text"
                android:inputType="numberDecimal"
                android:maxLength="5"
                android:textSize="@dimen/text_big" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/refillNotesTIL"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/settings_start_end_padding"
            android:layout_marginEnd="@dimen/settings_start_end_padding"
            android:paddingVertical="@dimen/refill_et_padding_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/priceOfFuelTIL"
            app:placeholderText="WRITE YOUR NOTES HERE"
            app:placeholderTextColor="@color/pistachio">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/refillNotesTIET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="NOTES"
                android:inputType="textMultiLine"
                android:maxLines="5"
                android:textSize="@dimen/text_big" />
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/fullRefillCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="25dp"
            android:backgroundTint="@color/green_dark"
            android:checked="true"
            android:text="REFILL TO FULL"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/refillNotesTIL" />

        <Button
            android:id="@+id/saveRefillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/settings_start_end_padding"
            android:backgroundTint="@color/green"
            android:clickable="false"
            android:contextClickable="false"
            android:text="@string/save_text"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fullRefillCheckBox" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>